<resources>
    <string name="folders">文件夹</string>
    <string name="video_count">个视频</string>
    <string name="double_back_press">再按一次退出YPlayer</string>
    <string name="net_path">网络串流</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="net_path_tips">请输入网址:</string>
    <string name="net_path_tips2">例如 http://www.example.com/video.mkv</string>
</resources>
