<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/biz_home_menu_rectangle"
    android:orientation="vertical">
    <TextView
        android:layout_margin="@dimen/dp_20"
        android:text="@string/net_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/net_path_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/net_path_tips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/net_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:layout_weight="3"/>

    </LinearLayout>

</LinearLayout>